--- a/introduction.html
+++ b/introduction.html
@@ -11,7 +11,6 @@
             position: relative;
             transition: color 0.3s ease-in-out;
         }
-
         .nav-link::after {
             content: "";
             position: absolute;
@@ -22,71 +21,77 @@
             background-color: white;
             transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
         }
-
         .nav-link:hover {
             color: #ffcc00;
         }
-
         .nav-link:hover::after {
             width: 100%;
             left: 0%;
         }
 
-        /* Join Discord Button */
-        .custom-btn {
-            background: linear-gradient(135deg, #4A90E2, #357ABD);
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-            padding: 12px 24px;
-            font-size: 18px;
-            border-radius: 8px;
-            font-weight: bold;
-            color: white;
-            box-shadow: 0 4px 10px rgba(0, 120, 255, 0.3);
-        }
-
-        .custom-btn:hover {
-            transform: scale(1.05);
-        }
-
-        /* Pop-Up Notification */
+        /* Pop-up Style */
         #popup {
             position: fixed;
-            bottom: -100px;
-            right: 20px;
-            background: #222;
-            color: white;
-            padding: 15px 20px;
-            border-radius: 8px;
-            font-size: 16px;
-            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
-            opacity: 0;
-            transition: all 0.5s ease-in-out;
-            cursor: pointer;
-            width: 250px;
-        }
-
-        #popup.show {
             bottom: 20px;
-            opacity: 1;
+            right: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            display: none;
+            animation: fadeIn 0.3s ease-in-out;
+            width: 250px;
+            text-align: center;
         }
-
+        
         /* Progress Bar */
         .progress-bar {
             width: 100%;
             height: 4px;
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 4px;
+            background: rgba(255, 255, 255, 0.3);
+            margin-top: 10px;
+            border-radius: 2px;
             overflow: hidden;
-            margin-top: 8px;
         }
-
         .progress-bar-fill {
-            width: 0%;
+            width: 100%;
             height: 100%;
-            background: #4A90E2;
-            transition: width 4.5s linear;
+            background: #ffcc00;
+            transition: width 5s linear;
         }
 
+        /* Animated Button */
+        .animated-btn {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 14px;
+            background: linear-gradient(135deg, #4A90E2, #357ABD);
+            color: white;
+            font-weight: bold;
+            border-radius: 6px;
+            text-align: center;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+            box-shadow: 0 4px 8px rgba(0, 120, 255, 0.4);
+        }
+        .animated-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 12px rgba(0, 120, 255, 0.5);
+        }
+        .animated-btn:active {
+            transform: scale(0.95);
+        }
+
+        /* Fade-in and Fade-out Animations */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes fadeOut {
+            from { opacity: 1; transform: translateY(0); }
+            to { opacity: 0; transform: translateY(10px); }
+        }
     </style>
 </head>
 <body class="bg-teal-700 text-white">
@@ -137,7 +142,7 @@
 
         <div class="mt-6">
             <a href="https://discord.com/invite/your-server-link" 
-                class="custom-btn">
+                class="bg-indigo-600 hover:bg-indigo-800 px-6 py-3 rounded-full text-lg font-semibold shadow-md transition duration-300">
                 Join Discord
             </a>
         </div>
@@ -146,7 +151,8 @@
     <!-- Pop-Up Notification -->
     <div id="popup">
         🎉 You can buy ranks from the <b>Ranks</b> page! <br>
-        <span style="color: #4A90E2; text-decoration: underline;">Click here</span>
+
+        <a href="ranks.html" class="animated-btn">Go to Ranks</a>
 
         <!-- Progress Bar -->
         <div class="progress-bar">
@@ -155,39 +161,37 @@
     </div>
 
     <script>
+        // Mobile Menu Toggle
         const menuBtn = document.getElementById('menu-btn');
         const mobileMenu = document.getElementById('mobile-menu');
-        const popup = document.getElementById('popup');
-        const progressFill = document.getElementById('progress-fill');
 
         menuBtn.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
 
-        // Close menu when clicking anywhere outside
-        document.addEventListener("click", function(event) {
+        // Close mobile menu when clicking outside
+        document.addEventListener('click', (event) => {
             if (!menuBtn.contains(event.target) && !mobileMenu.contains(event.target)) {
                 mobileMenu.classList.add('hidden');
             }
         });
 
-        // Show popup after 5 seconds
+        // Show pop-up after 5 seconds
         setTimeout(() => {
-            popup.classList.add('show');
-            progressFill.style.width = "100%"; // Animate progress bar
+            const popup = document.getElementById("popup");
+            const progressFill = document.getElementById("progress-fill");
 
-            // Hide after 5 more seconds
+            popup.style.display = "block"; 
+            progressFill.style.width = "100%"; // Fill the bar
+
             setTimeout(() => {
-                popup.classList.remove('show');
-                progressFill.style.width = "0%"; // Reset progress bar
+                popup.style.animation = "fadeOut 0.5s ease-in-out";
+                setTimeout(() => {
+                    popup.style.display = "none";
+                    progressFill.style.width = "0%"; // Reset progress bar
+                }, 500);
             }, 5000);
         }, 5000);
-
-        // Redirect to ranks page on click
-        popup.addEventListener('click', () => {
-            window.location.href = "ranks.html";
-        });
-
     </script>
 
 </body>
