--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- External CSS & JS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 
     <style>
         * {
@@ -19,8 +18,8 @@
         }
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #FFD700, #FFAE42);
-            color: black;
+            background: url('//cdn.tebex.io/webstore/1321420/images/1321420-752fe8602eabad48e4b679cc51ade45a7ebde470.png') no-repeat center center/cover;
+            color: white;
             text-align: center;
             overflow-x: hidden;
             height: 100vh;
@@ -31,16 +30,6 @@
             padding: 20px;
         }
 
-        /* Particles Background */
-        #particles-js {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            z-index: -1;
-        }
-
         /* Main Content */
         .container {
             display: flex;
@@ -48,24 +37,32 @@
             justify-content: space-between;
             width: 80%;
             max-width: 1200px;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
         }
 
         .text-content {
             text-align: left;
+            color: #fff;
         }
 
         .small-text {
-            font-size: 2.5vw;
+            font-size: 2vw;
             font-weight: bold;
             margin-bottom: 10px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: #f4c542;
         }
 
         .big-text {
-            font-size: 5vw;
+            font-size: 4vw;
             font-weight: bold;
             line-height: 1.1;
             margin-top: 10px;
-            text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+            text-shadow: 4px 4px 12px rgba(255, 255, 255, 0.2);
         }
 
         .cta-button {
@@ -75,18 +72,17 @@
             font-size: 1.2rem;
             font-weight: bold;
             color: black;
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(10px);
-            border: 2px solid rgba(0, 0, 0, 0.3);
+            background: #f4c542;
+            border: none;
             border-radius: 50px;
             cursor: pointer;
             transition: all 0.3s ease;
         }
 
         .cta-button:hover {
-            background: rgba(255, 255, 255, 0.3);
+            background: #ffd700;
             transform: scale(1.05);
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+            box-shadow: 0px 0px 15px rgba(255, 215, 0, 0.5);
         }
 
         /* Image Styling */
@@ -100,6 +96,7 @@
         .image-container img {
             width: 100%;
             height: auto;
+            border-radius: 10px;
             -webkit-user-drag: none;
             user-select: none;
             pointer-events: none;
@@ -117,12 +114,13 @@
             .container {
                 flex-direction: column;
                 text-align: center;
+                padding: 20px;
             }
             .small-text {
-                font-size: 5vw;
+                font-size: 4vw;
             }
             .big-text {
-                font-size: 8vw;
+                font-size: 7vw;
             }
             .cta-button {
                 font-size: 1rem;
@@ -131,23 +129,20 @@
             .image-container {
                 display: block;
                 max-width: 80%;
+                margin-top: 20px;
             }
         }
     </style>
 </head>
 
 <body oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
-
-    <!-- Particles Background -->
-    <div id="particles-js"></div>
-
     <!-- Hero Section -->
     <div class="container">
         <!-- Left Text Content -->
         <div class="text-content">
             <div class="small-text" data-aos="fade-right">WELCOME</div>
             <div class="big-text" data-aos="fade-left">
-                 <br> LION SMP <br> ADVENTURE
+                 LION SMP <br> ADVENTURE
             </div>
             <button class="cta-button" data-aos="zoom-in" onclick="window.location.href='introduction.html'">
                 Get Started
@@ -168,23 +163,6 @@
 
         // AOS Animation
         AOS.init({ duration: 1000, once: true });
-
-        // Particles.js Background Effect
-        particlesJS("particles-js", {
-            particles: {
-                number: { value: 80, density: { enable: true, value_area: 800 } },
-                color: { value: "#000" },
-                shape: { type: "circle" },
-                opacity: { value: 0.2, random: true },
-                size: { value: 3, random: true },
-                move: { enable: true, speed: 1, direction: "none", random: false, out_mode: "out" }
-            },
-            interactivity: {
-                events: { onhover: { enable: true, mode: "repulse" } },
-                modes: { repulse: { distance: 100, duration: 0.4 } }
-            }
-        });
     </script>
-
 </body>
 </html>
