--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <!-- Right Image (Visible on both PC & Mobile) -->
         <div class="image-container" data-aos="fade-left">
-            <img src="https://www.dropbox.com/scl/fi/jo2zi59wvb5gwfe7imqbx/LION-SMP.png?rlkey=5vrib0ndgc7q4wzen35m3do8a&st=omvsuz0f&dl=1" alt="LION SMP Banner">
+            <img src="https://assets.onecompiler.app/43am9xxy6/43dbcyztw/LION%20SMP%20(3).png" alt="LION SMP Banner">
         </div>
     </div>
 
